[package]
name = "traceroute"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
raw-socket  = { path = "../raw-socket" }
pnet = "0.28.0"
structopt = "0.3.25"
dns-lookup = "1.0.8"
rand = "0.8.4"
